# queens

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Game.cpp  Game.hpp  GlobalSettings.cpp  GlobalSettings.hpp  Level.cpp  Level.hpp  ResourceManager.hpp  Tile.cpp  Tile.hpp  UiManager.cpp  UiManager.hpp  UiSettings.cpp  UiSettings.hpp  World.cpp  World.hpp  main.cpp
src/levels/: 078.txt  079.txt
src/worlds/: world_1.txt  world_2.txt  world_3.txt  world_4.txt  world_5.txt  world_77.txt  world_78.txt  world_79.txt  world_80.txt  world_81.txt
